Update code and swagger docs
